--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Pacifico" rel="stylesheet">
 
 		<!-- My own style sheet -->
-<!-- 		<link rel="stylesheet" href="assets/css/style.css"> -->
+		<link rel="stylesheet" href="/public/css/style.css">
 
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
