--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 		<!-- Google fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Architects+Daughter|Pacifico|The+Girl+Next+Door" rel="stylesheet">
+		<link href="http://fonts.googleapis.com/css?family=Architects+Daughter|Pacifico|The+Girl+Next+Door|Slabo+27px" rel="stylesheet">
 
 		<!-- My own style sheet -->
 		<link rel="stylesheet" href="/css/style.css">
