adjusting buttons to make it easier to read and other stylistic things

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
 		<meta name="keywords" content="Fairytales, stories, imagination, multiple outcomes, pick your path, customizable story, fill in the blanks">
 		<meta name="author" content="Cecile Nguyen">
 		<title>Starry Time -- You're the STAR of your Story!</title>
-
+		<meta property="og:image" content="./images/starry-time-thumb.jpg" />
+		<meta property="og:description" content="Be the star of your story with Starry Time! Allows customizable story elements and multiple paths to choose from." />
+		<meta property="og:url" content="http://radiant-forest.herokuapp.com/" />
+		<meta property="og:title" content="Starry Time -- You're the STAR of your Story!" />
 		<!-- Latest Bootstrap compiled and minified CSS -->
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
